# TAHRIX

./: .gitignore  MVP_Teknikal_TAHRIX.md  README.md  add_user.sh  add_user2.sh  cleanup_orphaned.sh  cleanup_pending.sh  fix_stale.sh  gen_hash.py  gen_hash_server.py  landing.html  package-lock.json  package.json  probe_data.py  probe_events.py  register_user.sh  trigger_all.py  trigger_task.py
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_telegram.py  0003_anomaly_score.py  0004_address_labels.py  0005_add_wallet_address.py
backend/app/: __init__.py  main.py
backend/app/adapters/: alchemy.py  base.py  btc.py  chainalysis.py  etherscan.py  helius.py  ipfs.py  layerzero.py  osint.py  telegram.py  tron.py  wormhole.py
backend/app/agent/: hypothesis.py  llm.py  memory.py  orchestrator.py  tools.py
backend/app/api/: __init__.py
backend/app/api/v1/: dependencies.py  error_handlers.py  middleware.py
backend/app/api/v1/endpoints/: agent.py  audit.py  auth.py  cases.py  health.py  labels.py  resolve.py  telegram.py  webhooks.py
backend/app/core/: address.py  config.py  exceptions.py  logging.py  security.py
backend/app/db/: neo4j.py  neo4j_schema.py  postgres.py  redis.py
backend/app/models/: domain.py  enums.py  schemas.py  sql.py
backend/app/repositories/: graph_repository.py
backend/app/services/: anomaly_detector.py  audit.py  gnn_service.py  ingestion.py  input_resolver.py  investigation_runner.py  report_generator.py  risk_scorer.py  telegram_link.py
backend/app/workers/: celery_app.py  tasks.py
backend/ml/: README.md  TAHRIX_GAT_Elliptic_Colab.ipynb  export_onnx.py  train_gat_elliptic.py
backend/ml/hasil_running/: TAHRIX_GAT_Elliptic_Colab (1).ipynb  gat_elliptic.metrics (1).json
backend/scripts/: delete_disputed.py
frontend/: index.html
skills/tahrix-agent/: README.md  SKILL.md
skills/tahrix-agent/assets/: streaming-backend.py  streaming-frontend.js
skills/tahrix-agent/references/: streaming-api.md  tool-registry.md
tahrix-landing/: package-lock.json  package.json
tahrix-landing/src/app/: globals.css  layout.tsx  page.tsx
tahrix-landing/src/components/: CTA.tsx  Features.tsx  Footer.tsx  Hero.tsx  Stats.tsx  (+3 more)
